--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,8 +1,27 @@
 
 <div class="side-header">
-
+  <div class="user_name">
+    <a href="#">Tom</a>
+  </div>
+  <div class="make_room">
+    <a href="#">
+      チャットを作成する
+    </a>
+  </div>
 </div>
 
 <div class="rooms">
-a
+ 
+  <div class="room">
+    <div class="room_name">
+      <a href="#">techroom1</a>
+    </div>
+  </div>
+  
+  <div class="room">
+    <div class="room_name">
+      <a href="#">techroom2</a>
+    </div>
+  </div>
+
 </div>
