--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -1,41 +1,37 @@
 .wrapper {
   display: flex;
 }
-/* 以下サイド画面 */
-
 .side-bar {
   background-color: #253141;
   width: 300px;
   height: 100vh;
 }
 
-.side-header {
+.side-bar-header {
   height: 100px;
   padding: 0 20px;
-  display: flex;
   background-color: #253141;
+  display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.user_name a {
+.header-name a {
   font-size: 16px;
-  background-color: #253141;
   color: #fafafa;
   text-decoration: none;
 }
 
-.make_room a {
+.create-room a {
   font-size: 10px;
-  color: deepskyblue;
   border: 1px solid lightblue;
   padding: 14px;
+  color: deepskyblue;
   text-decoration: none;
 }
 
 .rooms {
   background-color: #2f3e51;
-  width: 300px;
   height: calc(100vh - 100px);
   padding: 0 20px;
   overflow: scroll;
@@ -45,16 +41,13 @@
   padding: 20px 0 40px;
 }
 
-.room_name {
+.room-name a {
   text-decoration: none;
   color: white;
 }
 
-/* 以下チャット画面 */
-
 .chat {
   background-color: #ffffff;
-  height: 100vh;
   width: calc(100vw - 300px);
 }
 
@@ -62,13 +55,81 @@
   height: 100px;
   padding: 0 40px;
 }
-.chat-main {
+
+.messages {
   background-color: #fafafa;
-  height: calc(100vh - 190px);
-  padding-top: 46px 40px 0;
+  height: calc(100vh - 100px - 90px);
+  padding: 46px 40px 0;
+  overflow: scroll;
 }
-.chat-footer {
+
+.message {
+  margin: 10px 0 0 0;
+}
+
+.upper-message {
+  display: flex;
+}
+
+.message-user {
+  color: #434a54;
+  font-size: 16px;
+}
+
+.message-date {
+  color: #999;
+  font-size: 12px;
+  padding-left: 10px;
+}
+
+.lower-message {
+  margin-top: 10px;
+}
+
+.message-content {
+  color: #434a54;
+  font-size: 14px;
+  margin-bottom: 40px;
+}
+
+.form {
   background-color: #dddddd;
   height: 90px;
   padding: 20px 40px;
+  display: flex;
+}
+
+.form-input {
+  background-color: white;
+  width: 100%;
+  display: flex;
+}
+
+.form-message {
+  border: none;
+  height: 50px;
+  width: 100%;
+  padding-left: 10px;
+}
+.form-submit {
+  background-color: #38aef0;
+  border: none;
+  font-size: 16px;
+  color: white;
+  padding: 0 20px;
+  margin-left: 15px;
+  height: 50px;
+}
+.form-image {
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  margin: 5px 10px;
+  text-align: center;
+}
+
+.hidden {
+  display: none;
 }
