--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,27 +1,21 @@
-
-<div class="side-header">
-  <div class="user_name">
+<div class="side-bar-header">
+  <div class="header-name">
     <a href="#">Tom</a>
   </div>
-  <div class="make_room">
-    <a href="#">
-      チャットを作成する
-    </a>
+  <div class="create-room">
+    <a href="#">チャットを作成する</a>
   </div>
 </div>
 
 <div class="rooms">
- 
   <div class="room">
-    <div class="room_name">
+    <div class="room-name">
       <a href="#">techroom1</a>
     </div>
   </div>
-  
   <div class="room">
-    <div class="room_name">
+    <div class="room-name">
       <a href="#">techroom2</a>
     </div>
   </div>
-
 </div>
